# hopscotch-map-adapter

./: CMakeLists.txt  README.md
metaconfigure/: description.json
